<?xml version="1.0"?>
<package>
  <name>subscriber</name>
  <version>1.0.0</version>
  <description>The simple subscriber for CMU Radpiper Intro to ROS session</description>


  <maintainer email="mmousaei@andrew.cmu.edu">Mohammadreza Mousaei</maintainer>
  <license>CMU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>config</build_depend>
<!--   <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend> -->
</package>
